manifests/platform-core-services/api-gateway/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hub-platform-edge
  labels:
    name: hub-platform-edge
---
apiVersion: v1
kind: Namespace
metadata:
  name: hub-platform-apps
  labels:
    name: hub-platform-apps
